[project]
name = "asyncfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.9",
    "alembic>=1.13.2",
    "fastapi[standard]>=0.112.1",
    "psycopg>=3.2.1",
    "psycopg-binary>=3.2.1",
    "psycopg-pool>=3.2.2",
    "pydantic>=2.8.2",
    "pydantic-core>=2.20.1",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.32",
    "sqlmodel>=0.0.21",
    "uvicorn>=0.30.6",
]
